first draft of the introduction

--- a/avm2016_schoenhoefer_pears.tex
+++ b/avm2016_schoenhoefer_pears.tex
@@ -68,6 +68,18 @@
 \section{Introduction}
 \label{sec:Intro}
 
+The analysis of structures and patterns in living organisms is one of the most significant tasks in biology. Especially the formation mechanisms of macroscopic structures out of microscopic molecules is of great interest. In recent 
+years scientist discovered more and more lipid systems which form so called minimal surface phases. These bicontinous, triply periodic structures also draw the attention of physcisist as these nanostrutures cause for instance special 
+photonic effects as iridescence \cite{}. One prominent example of these structures is the \textit{Ia3d double gyroid}. Here mixtures of lipids and solvent generate next to micella and lamella structures also the gyroid surface.
+In this case it is often assumed that the amphiphilic features of the lipid molecules and consequently the long range interactions are the most important and driving aspects of this self-assembly. However, entropy is another major 
+factor which influences many systems in statistical physics. The paradigms where order is entropically driven only by the shape of the particles is the hard sphere model and liquid crystal systems in general. In regard to the hard 
+sphere model the system maximizes the entropy by placing the spheres in a lattice arrangement. The nematic and smectic phase can be explained in a similar fashion for hard rods. The significance of shape is also implied in the analysis
+of the gyroid phase. Lipids which form the gyroid surface are often sketched as cones. Whereas in the lamella phase the molecules are considered as cylinders. Inspired by this and the previous results of Ellison et al. \cite{} we want 
+to concentrate on hard pear shaped liquid crystals. Using Molecular Dynamics symulation techniques Ellison could show numerically that hard tappared particles can form the double gyroid next to the lamella and isotropic phase. 
+
+In the following we carry this idea forward and introduce the phase diagram of pear-shaped particles in section \ref{sec:PhaseDiagram}. Additionally the system is analyzes geometrically to determine the size of the particles and the 
+correlations between the gyroid surface and the pears in section \ref{sec:GeometricalAnalysis}.
+
 \begin{itemize}
     \item Lipids and proteins form minimal surfaces like the Gyroid and the Diamond surface structures
     \item nanostructures have for example special photonic properties (color caused by structure/ butterfly)
