extended phase transition section

--- a/avm2016_schoenhoefer_pears.tex
+++ b/avm2016_schoenhoefer_pears.tex
@@ -64,32 +64,33 @@
 \label{sec:Intro}
 
 The analysis of structures and patterns in living organisms is one of the most significant tasks in biology. Especially the formation mechanisms of macroscopic structures out of microscopic molecules is of great interest. In recent 
-years scientist discovered more and more lipid systems which form so called minimal surface phases. These bicontinous, triply periodic structures also draw the attention of physcisist as these nanostrutures cause for instance special 
-photonic effects as iridescence \cite{}. One prominent example of these structures is the \textit{Ia3d double gyroid}. Here mixtures of lipids and solvent generate next to micella and lamella structures also the gyroid surface.
+years scientist discovered more and more lipid systems which form so called minimal surface phases. These bicontinous, triply periodic structures also draw the attention of physicist as these nanostructures cause for instance
+special photonic effects as iridescence \cite{}. One prominent example of these structures is the \textit{Ia3d double gyroid}. Here mixtures of lipids and solvent generate next to micella and lamella structures also the gyroid surface.
 In this case it is often assumed that the amphiphilic features of the lipid molecules and consequently the long range interactions are the most important and driving aspects of this self-assembly. Consequently, most of the published 
-particle simulations contain attratcive particle interactions \cite{}.\\
+particle simulations contain attractive particle interactions \cite{}.\\
 
 However, entropy is another major factor which influences many systems in statistical physics. The paradigms where the configuration of the particles is entropically driven only by the particle's shape is the hard sphere model and 
 liquid crystal systems in general. The special attribute of those systems just interacting via collision is the constant potential energy for all times. As a consequence the Helmholtz free energy $F=U-T\cdot S$ is just governed purely 
-by entropy $S$. In regard to the hard sphere model the system maximizes entropy by placing the spheres in a lattice arrangement and thus, causing a transition form an anisotropic to a phase of long ranged tranlational order. The 
-transitions to nematic and smectic phases which are characterized by a long rangig orientationla order can be explained in a similar fashion by entropy for hard rods.\\
+by entropy $S$. In regard to the hard sphere model the system maximizes entropy by placing the spheres in a lattice arrangement and thus, causing a transition form an anisotropic to a phase of long ranged translational order. The 
+transitions to nematic and smectic phases which are characterized by a long ranging orientational order can be explained in a similar fashion by entropy for hard rods.\\
 
-The significance of shape is also implied in the analysis of the gyroid phase in biological systmes. Lipids which form the gyroid surface are often sketched as cones. Whereas in the lamella phase the molecules are considered as
+The significance of shape is also implied in the analysis of the gyroid phase in biological systems. Lipids which form the gyroid surface are often sketched as cones. Whereas in the lamella phase the molecules are considered as
 cylinders. Inspired by this attempt to explain the induced curvature of the gyroid phase and the previous results of Ellison et al. \cite{} we want to concentrate on hard pear shaped liquid crystals. Using Molecular Dynamics 
 simulation techniques Ellison could show numerically that hard pears can form the double gyroid next to the smectic and isotropic phase.\\
 
-A particle is considered as "pear-shaped" if it is elongated and tappered. The ellongation is charactereized by the aspect ratio $k$, whereas the tapperdness is 
-described by the degree of tappering $k_{\theta}$. The lower the value of $k_{\theta}$ the pointier the pear gets towards one end. This means that for a high degree of tappering the particle shape converges more and more towards an
-ellipsoid. Exploiting the rotational symetry the pear can explained by a set of two Bezier-curves.\\
+A particle is considered as "pear-shaped" if it is elongated and tapered. The elongation is characterized by the aspect ratio $k$, whereas the taperdness is described by the degree of tapering $k_{\theta}$. The lower the value of 
+$k_{\theta}$ the pointier the pear gets towards one end. This means that for a high degree of tapering the particle shape converges more and more towards an ellipsoid. Exploiting the rotational symmetry the pear can explained by 
+a set of two Bezier-curves.\\
 
-To simulate a system of those particles we both use Molecular Dynamics and Monte Carlo algorithm techniques. The applied potential for a hard core interaction of pears is a modified version of the Weeks-Chandler-Anderson potential 
-(WCA), which is also known as the parametric hard Gaussian overlap (PHGO) approximation. The PHGO model is grounded on the fact that convex particles like can be well
-locally approximated by ellipsoids. To ensure the convexity of the particle its shape is described by two continously differential Bezier-curves in due consideration of the rotational symmetrie of the pears. However, the size and 
-aspect ratio of these ellipsoids depend on the relative positions and orientation of the particles. The PHGO model and the pear-potential is described in great detail in Ref. \ref{}.
+To simulate a system of those particles we both use Molecular Dynamics and Monte Carlo algorithm techniques. The applied potential for a hard core interaction of pears is a modified version of the Weeks-Chandler-Anderson 
+potential (WCA), which is also known as the parametric hard Gaussian overlap (PHGO) approximation. The PHGO model is grounded on the fact that convex particles like can be well locally approximated by ellipsoids. To ensure 
+the convexity of the particle its shape is described by two countinously differential Bezier-curves in due consideration of the rotational symmetry of the pears. However, the size and aspect ratio of these ellipsoids depend on the 
+relative positions and orientation of the particles. The PHGO model and the pear-potential is described in great detail in Ref. \cite{}.
 
-In the following we carry this idea forward and introduce the phase diagram of pear-shaped particles in regard to the global density and the degree of tappering in section \ref{sec:PhaseDiagram}. We then concentrate on the gyroid phase
-of different pear systems. Here the gyroid structures are analyzed geometrically to determine the periodicity and therefore the "width" of the gyroid phase. In particular Set Voronoi Tessellation is used to determine local features
-and correlations between the gyroid surface and the pears in section \ref{sec:GeometricalAnalysis}.
+In the following we carry this idea forward and introduce the phase diagram of pear-shaped particles in regard to the global density and the degree of tapering in section \ref{sec:PhaseDiagram}. We then concentrate on the gyroid 
+phase of different pear systems. Here the gyroid structures are analyzed geometrically to determine the periodicity and therefore the "width" of the gyroid phase. In particular Set Voronoi Tessellation is used to determine local 
+features and correlations between the gyroid surface and the pears in section \ref{sec:GeometricalAnalysis}.
+
 %
 %\begin{itemize}
 %    \item Lipids and proteins form minimal surfaces like the Gyroid and the Diamond surface structures
@@ -107,17 +108,24 @@ and correlations between the gyroid surface and the pears in section \ref{sec:Ge
 \section{Phase Diagram}
 \label{sec:PhaseDiagram}
 
-In previous studies using compuatational techniques some shapes of pears were covered. So showed Brames that for slightly tappered particles with aspect ratio $k=5$the nematic, bilayer smectic and cristalline phase is formed \cite{}.
-Ellison also concentrated just on one particular type of pear with $k=3$ and $k_{\theta}=3.8$. With this configuration the gyroid phase could be determined. 
+In previous studies using computational techniques some shapes of pears were covered. So showed Brames that for slightly tapered particles with aspect ratio $k=5$ the nematic, bilayer smectic and crystaline phase is formed 
+\cite{}. Ellison also concentrated specifically on one particular type of pear with $k=3$ and $k_{\theta}=3.8$. He showed for this configuration a transition from the lamella to the gyroid phase by reducing the global density of the 
+system and hinted that this phase transition also occurs in a narrow range of $3\leq k_{\theta}\leq 4.4$. To analyze the gyroid structure in section \ref{sec:GeometricalAnalysis} we determine in the following the phases of the
+particles around the gyroid phase in much more detail. Here simulations of 3000 particles with $k_{\theta}$ between $2$ and $6$ within are cubic box are performed. The systems are first quickly compressed from a low density 
+state ($\rho_g=$) within the anisotropic phase to the crystalline phase ($\rho_g=$) where the particles form rigid sheets of bilayers without any diffusion of the particles within the simulation box. Afterwards a sequence of 
+consecutive small and slow decompressions is performed. At every stage we let the system equilibrate and gain the configurations after 1000000 steps. The exact values of $\rho_g$ can be determined in Figure \ref{fig:}. The 
+decompression stops when the system reaches a global density of $\rho_g=$. The whole phase diagram is shown in Figure \ref{}. \textbf{Zwar} the same phase diagram can be reproduced by a sequence of compressions from the 
+anisotropic phase. However, especially the gyroid structure and the smectic alignment of the pear particles need more than $10^7$ steps to equilibrate at the phase transitions compared to the rather quick equilibration from decompression with around 500000 steps. 
+
 \begin{itemize}
     \item 10000 particle system
     \item Clustering the systems show channel systems
-    \item scattering functons (fft) reveal number of particles within one unit cell
-    \item Consequently latticesize of the gyroid phase is determined ("width" of the gyroid phase)
+    \item scattering functions (fft) reveal number of particles within one unit cell
+    \item Consequently lattice size of the gyroid phase is determined ("width" of the gyroid phase)
 \end{itemize}
 
 \begin{itemize}
-    \item different degrees of tappering
+    \item different degrees of tapering
     \item from lamella phase into lower density phases (nematic, gyroid, anisotropic)
     \item showing different pictures of the system
 \end{itemize}
@@ -129,7 +137,7 @@ Ellison also concentrated just on one particular type of pear with $k=3$ and $k_
     \item distance between sheets (longitudinal distribution function)
     \item Mean square displacement
     \item Voronoi tessellation (POMELO)
-    \item comparisson between Gaussian curvature of gyroid and Volume/Surface of Voronoi cell and distance respectively
+    \item comparison between Gaussian curvature of gyroid and Volume/Surface of Voronoi cell and distance respectively
     \item maximizing the degrees of freedom in system (standard variation of Voronoi volume)
 \end{itemize}
 
