small changes in *.tex and gitignore

--- a/avm2016_schoenhoefer_pears.tex
+++ b/avm2016_schoenhoefer_pears.tex
@@ -79,7 +79,7 @@ cylinders. Inspired by this attempt to explain the induced curvature of the gyro
 simulation techniques Ellison could show numerically that hard pears can form the double gyroid next to the smectic and isotropic phase.\\
 
 A particle is considered as "pear-shaped" if it is elongated and tapered. The elongation is characterized by the aspect ratio $k$, whereas the taperdness is described by the degree of tapering $k_{\theta}$. The lower the value of 
-$k_{\theta}$ the pointier the pear gets towards one end. This means that for a high degree of tapering the particle shape converges more and more towards an ellipsoid. Exploiting the rotational symmetry the pear can explained by 
+$k_{\theta}$ the pointier the pear gets towards one end. This means that for a high degree of tapering the particle shape converges more and more towards an ellipsoid. Exploiting the rotational symmetry the pear can be characterized by 
 a set of two Bezier-curves.\\
 
 To simulate a system of those particles we both use Molecular Dynamics and Monte Carlo algorithm techniques. The applied potential for a hard core interaction of pears is a modified version of the Weeks-Chandler-Anderson 
@@ -114,7 +114,7 @@ system and hinted that this phase transition also occurs in a narrow range of $3
 particles around the gyroid phase in much more detail. Here simulations of 3000 particles with $k_{\theta}$ between $2$ and $6$ within are cubic box are performed. The systems are first quickly compressed from a low density 
 state ($\rho_g=$) within the anisotropic phase to the crystalline phase ($\rho_g=$) where the particles form rigid sheets of bilayers without any diffusion of the particles within the simulation box. Afterwards a sequence of 
 consecutive small and slow decompressions is performed. At every stage we let the system equilibrate and gain the configurations after 1000000 steps. The exact values of $\rho_g$ can be determined in Figure \ref{fig:}. The 
-decompression stops when the system reaches a global density of $\rho_g=$. The whole phase diagram is shown in Figure \ref{}. \textbf{Zwar} the same phase diagram can be reproduced by a sequence of compressions from the 
+decompression stops when the system reaches a global density of $\rho_g=$. The whole phase diagram is shown in Figure \ref{}. Indeed the same phase diagram can be reproduced by a sequence of compressions from the 
 anisotropic phase. However, especially the gyroid structure and the smectic alignment of the pear particles need more than $10^7$ steps to equilibrate at the phase transitions compared to the rather quick equilibration from decompression with around 500000 steps. 
 
 \begin{itemize}
